complete appointments
